@@ -1,2 +1,1 @@
 from .main import DCORAid  # noqa: F401
-from . import widgets  # noqa: F401
