@@ -1,1 +1,2 @@
+from .bg_thread import run_async  # noqa: F401
 from .wait_cursor import show_wait_cursor, ShowWaitCursor  # noqa: F401
