@@ -1,5 +1,7 @@
 0.0.7
  - fix: start even if DCOR is down
+ - ref: move connectivity check and user database update to separate
+   background threads
 0.0.6
  - enh: allow to create the circle if it does not exist during dataset
    creation
